--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,262 +1,314 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>L4 Ativos - Gerador de Documentos</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>L4 Ativos - Gerador de Documentos</title>
 
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: #f5f5f5;
-            color: #222;
-            min-height: 100vh;
-        }
+  <style>
+    :root {
+      --l4-blue: #0052a4;
+      --l4-dark: #050816;
+      --l4-dark-card: #0b1120;
+      --l4-border: #1f2933;
+      --l4-text: #e5e7eb;
+      --l4-muted: #9ca3af;
+    }
 
-        .header {
-            background: white;
-            padding: 20px 40px;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-            display: flex;
-            align-items: center;
-            gap: 20px;
-        }
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
-        .header img {
-            height: 50px;
-        }
+    body {
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+        sans-serif;
+      color: var(--l4-text);
+      min-height: 100vh;
+    }
 
-        .header-text h1 {
-            font-size: 1.8em;
-            color: #0052A4;
-            margin-bottom: 5px;
-        }
+    .bg-animation {
+      position: fixed;
+      inset: 0;
+      z-index: -2;
+      background: radial-gradient(circle at top, #020617 0, #000 60%);
+      overflow: hidden;
+    }
 
-        .header-text p {
-            color: #666;
-            font-size: 0.95em;
-        }
+    .bg-animation::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background: url("../static/bg-map.gif") center/cover no-repeat;
+      opacity: 0.4;
+      mix-blend-mode: screen;
+    }
 
-        .container {
-            max-width: 1200px;
-            margin: 40px auto;
-            padding: 0 20px;
-        }
+    .overlay {
+      position: relative;
+      min-height: 100vh;
+      background: radial-gradient(circle at top, rgba(17, 24, 39, 0.5) 0, transparent 60%);
+    }
 
-        .tabs {
-            display: flex;
-            gap: 10px;
-            margin-bottom: 30px;
-            flex-wrap: wrap;
-        }
+    .header {
+      background: rgba(0, 0, 0, 0.9);
+      padding: 14px 40px;
+      display: flex;
+      align-items: center;
+      gap: 16px;
+      border-bottom: 1px solid var(--l4-border);
+      backdrop-filter: blur(12px);
+    }
 
-        .tab-btn {
-            padding: 12px 24px;
-            background: white;
-            color: #666;
-            border: 2px solid #e0e0e0;
-            border-radius: 8px;
-            cursor: pointer;
-            font-size: 1em;
-            font-weight: 600;
-            transition: all 0.3s ease;
-        }
+    .header .logo {
+      height: 40px;
+      object-fit: contain;
+    }
 
-        .tab-btn:hover {
-            border-color: #0052A4;
-            color: #0052A4;
-        }
+    .header-text h1 {
+      font-size: 1.55rem;
+      color: #f9fafb;
+      margin-bottom: 4px;
+    }
 
-        .tab-btn.active {
-            background: #0052A4;
-            color: white;
-            border-color: #0052A4;
-        }
+    .header-text p {
+      font-size: 0.9rem;
+      color: var(--l4-muted);
+    }
 
-        .form-container {
-            background: white;
-            border-radius: 12px;
-            padding: 40px;
-            box-shadow: 0 4px 20px rgba(0,0,0,0.08);
-            display: none;
-            border-top: 4px solid #0052A4;
-        }
+    .container {
+      max-width: 1100px;
+      margin: 32px auto 48px;
+      padding: 0 16px;
+    }
 
-        .form-container.active {
-            display: block;
-            animation: slideIn 0.3s ease;
-        }
+    .tabs {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 8px;
+      margin-bottom: 20px;
+    }
 
-        @keyframes slideIn {
-            from {
-                opacity: 0;
-                transform: translateY(10px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
+    .tab-btn {
+      padding: 9px 20px;
+      border-radius: 999px;
+      border: 1px solid var(--l4-border);
+      background: rgba(15, 23, 42, 0.85);
+      color: var(--l4-text);
+      font-size: 0.92rem;
+      font-weight: 500;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      gap: 6px;
+      transition: all 0.2s ease;
+    }
 
-        .form-title {
-            font-size: 1.6em;
-            color: #0052A4;
-            margin-bottom: 30px;
-            padding-bottom: 15px;
-            border-bottom: 2px solid #e0e0e0;
-        }
+    .tab-btn:hover {
+      border-color: var(--l4-blue);
+      transform: translateY(-1px);
+    }
 
-        .form-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 20px;
-            margin-bottom: 30px;
-        }
+    .tab-btn.active {
+      background: var(--l4-blue);
+      border-color: var(--l4-blue);
+      color: #f9fafb;
+      box-shadow: 0 10px 25px rgba(0, 82, 164, 0.35);
+    }
 
-        .form-group {
-            display: flex;
-            flex-direction: column;
-        }
+    .form-container {
+      background: var(--l4-dark-card);
+      border-radius: 18px;
+      padding: 28px 24px 30px;
+      box-shadow: 0 25px 50px rgba(0, 0, 0, 0.75);
+      border: 1px solid var(--l4-border);
+      display: none;
+    }
 
-        .form-group label {
-            font-weight: 600;
-            margin-bottom: 8px;
-            color: #333;
-            font-size: 0.95em;
-        }
+    .form-container.active {
+      display: block;
+      animation: fadeInUp 0.25s ease;
+    }
 
-        .form-group input,
-        .form-group select,
-        .form-group textarea {
-            padding: 12px;
-            border: 2px solid #e0e0e0;
-            border-radius: 6px;
-            font-size: 1em;
-            font-family: inherit;
-            transition: border-color 0.3s ease;
-        }
+    @keyframes fadeInUp {
+      from {
+        opacity: 0;
+        transform: translateY(6px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
 
-        .form-group input:focus,
-        .form-group select:focus,
-        .form-group textarea:focus {
-            outline: none;
-            border-color: #0052A4;
-        }
+    .form-title {
+      font-size: 1.35rem;
+      color: #f9fafb;
+      margin-bottom: 16px;
+    }
 
-        .section-title {
-            font-size: 1.2em;
-            color: #0052A4;
-            margin-top: 30px;
-            margin-bottom: 15px;
-            font-weight: 600;
-            padding-bottom: 10px;
-            border-bottom: 2px solid #e0e0e0;
-        }
+    .info-box {
+      background: rgba(15, 23, 42, 0.95);
+      border-left: 4px solid var(--l4-blue);
+      padding: 10px 12px;
+      margin-bottom: 22px;
+      border-radius: 10px;
+      color: var(--l4-text);
+      font-size: 0.9rem;
+      display: flex;
+      align-items: center;
+      gap: 6px;
+    }
 
-        .form-group.full {
-            grid-column: 1 / -1;
-        }
+    .section-title {
+      font-size: 0.88rem;
+      color: var(--l4-muted);
+      margin: 22px 0 10px;
+      text-transform: uppercase;
+      letter-spacing: 0.08em;
+    }
 
-        .button-group {
-            display: flex;
-            gap: 15px;
-            margin-top: 40px;
-            justify-content: center;
-        }
+    .form-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 14px 18px;
+    }
 
-        .btn {
-            padding: 14px 32px;
-            border: none;
-            border-radius: 8px;
-            font-size: 1em;
-            font-weight: 600;
-            cursor: pointer;
-            transition: all 0.3s ease;
-        }
+    .form-group {
+      display: flex;
+      flex-direction: column;
+      gap: 4px;
+    }
 
-        .btn-primary {
-            background: #0052A4;
-            color: white;
-        }
+    .form-group.full {
+      grid-column: 1 / -1;
+    }
 
-        .btn-primary:hover {
-            background: #003d7a;
-            transform: translateY(-2px);
-            box-shadow: 0 4px 12px rgba(0,82,164,0.3);
-        }
+    .form-group label {
+      font-size: 0.82rem;
+      color: var(--l4-muted);
+    }
 
-        .btn-secondary {
-            background: white;
-            color: #0052A4;
-            border: 2px solid #0052A4;
-        }
+    .form-group input,
+    .form-group select,
+    .form-group textarea {
+      background: #020617;
+      border-radius: 10px;
+      border: 1px solid var(--l4-border);
+      padding: 9px 11px;
+      font-size: 0.92rem;
+      color: var(--l4-text);
+      font-family: inherit;
+      transition: all 0.15s ease;
+    }
 
-        .btn-secondary:hover {
-            background: #f5f5f5;
-        }
+    .form-group input::placeholder,
+    .form-group textarea::placeholder {
+      color: #4b5563;
+    }
 
-        .message {
-            padding: 16px;
-            border-radius: 8px;
-            margin-top: 20px;
-            display: none;
-        }
+    .form-group input:focus,
+    .form-group select:focus,
+    .form-group textarea:focus {
+      outline: none;
+      border-color: var(--l4-blue);
+      box-shadow: 0 0 0 1px rgba(0, 82, 164, 0.35);
+    }
 
-        .message.success {
-            background: #d4edda;
-            color: #155724;
-            border: 2px solid #28a745;
-            display: block;
-        }
+    .button-group {
+      display: flex;
+      justify-content: flex-end;
+      gap: 10px;
+      margin-top: 26px;
+    }
 
-        .message.error {
-            background: #f8d7da;
-            color: #721c24;
-            border: 2px solid #f5c6cb;
-            display: block;
-        }
+    .btn {
+      padding: 9px 22px;
+      border-radius: 999px;
+      font-size: 0.92rem;
+      font-weight: 500;
+      border: none;
+      cursor: pointer;
+      display: inline-flex;
+      align-items: center;
+      gap: 6px;
+      transition: all 0.18s ease;
+    }
 
-        .info-box {
-            background: #e3f2fd;
-            border-left: 4px solid #0052A4;
-            padding: 15px;
-            margin-bottom: 20px;
-            border-radius: 4px;
-            color: #333;
-        }
+    .btn-primary {
+      background: var(--l4-blue);
+      color: #f9fafb;
+      box-shadow: 0 14px 28px rgba(0, 82, 164, 0.45);
+    }
 
-        @media (max-width: 768px) {
-            .header {
-                flex-direction: column;
-                text-align: center;
-            }
+    .btn-primary:hover {
+      background: #004184;
+      transform: translateY(-1px);
+    }
 
-            .form-container {
-                padding: 20px;
-            }
+    .btn-secondary {
+      background: transparent;
+      color: var(--l4-muted);
+      border: 1px solid var(--l4-border);
+    }
 
-            .tabs {
-                flex-direction: column;
-            }
+    .btn-secondary:hover {
+      border-color: #4b5563;
+      color: #e5e7eb;
+    }
 
-            .tab-btn {
-                width: 100%;
-            }
-        }
-    </style>
+    .message {
+      margin-top: 14px;
+      padding: 9px 12px;
+      border-radius: 10px;
+      font-size: 0.86rem;
+      display: none;
+    }
+
+    .message.success {
+      display: block;
+      background: rgba(21, 128, 61, 0.12);
+      border: 1px solid #22c55e;
+      color: #bbf7d0;
+    }
+
+    .message.error {
+      display: block;
+      background: rgba(185, 28, 28, 0.12);
+      border: 1px solid #f87171;
+      color: #fecaca;
+    }
+
+    @media (max-width: 768px) {
+      .header {
+        padding: 12px 18px;
+        flex-direction: column;
+        align-items: flex-start;
+      }
+
+      .container {
+        margin-top: 20px;
+      }
+
+      .form-container {
+        padding: 20px 16px 22px;
+      }
+
+      .button-group {
+        justify-content: center;
+      }
+    }
+  </style>
 </head>
 <body>
+  <div class="bg-animation"></div>
+
+  <div class="overlay">
     <div class="header">
-        <img src="../static/logo.jpg" alt="L4 Ativos">
-        <div class="header-text">
-            <h1>Gerador de Documentos Jurídicos</h1>
-            <p>Automação de contratos e declarações – L4 Ativos</p>
-        </div>
+      <img src="../static/logo-l4.png" alt="L4 Ativos" class="logo" />
+      <div class="header-text">
+        <h1>Gerador de Documentos Jurídicos</h1>
+        <p>Automação de contratos e declarações – L4 Ativos</p>
+      </div>
     </div>
 
     <div class="container">
@@ -667,6 +719,7 @@
             </form>
         </div>
     </div>
+  </div>
 
     <script>
         const API_URL = 'http://localhost:8000'; // Trocar para URL de produção depois
