feat: front L4 + integração com API Render

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,303 +1,11 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>L4 Ativos - Gerador de Documentos</title>
-
-  <style>
-    :root {
-      --l4-blue: #0052a4;
-      --l4-dark: #050816;
-      --l4-dark-card: #0b1120;
-      --l4-border: #1f2933;
-      --l4-text: #e5e7eb;
-      --l4-muted: #9ca3af;
-    }
-
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-        sans-serif;
-      color: var(--l4-text);
-      min-height: 100vh;
-    }
-
-    .bg-animation {
-      position: fixed;
-      inset: 0;
-      z-index: -2;
-      background: radial-gradient(circle at top, #020617 0, #000 60%);
-      overflow: hidden;
-    }
-
-    .bg-animation::before {
-      content: "";
-      position: absolute;
-      inset: 0;
-      background: url("static/bg-map.gif") center/cover no-repeat;
-      opacity: 0.4;
-      mix-blend-mode: screen;
-    }
-
-    .overlay {
-      position: relative;
-      min-height: 100vh;
-      background: radial-gradient(circle at top, rgba(17, 24, 39, 0.5) 0, transparent 60%);
-    }
-
-    .header {
-      background: rgba(0, 0, 0, 0.9);
-      padding: 14px 40px;
-      display: flex;
-      align-items: center;
-      gap: 16px;
-      border-bottom: 1px solid var(--l4-border);
-      backdrop-filter: blur(12px);
-    }
-
-    .header .logo {
-      height: 40px;
-      object-fit: contain;
-    }
-
-    .header-text h1 {
-      font-size: 1.55rem;
-      color: #f9fafb;
-      margin-bottom: 4px;
-    }
-
-    .header-text p {
-      font-size: 0.9rem;
-      color: var(--l4-muted);
-    }
-
-    .container {
-      max-width: 1100px;
-      margin: 32px auto 48px;
-      padding: 0 16px;
-    }
-
-    .tabs {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 8px;
-      margin-bottom: 20px;
-    }
-
-    .tab-btn {
-      padding: 9px 20px;
-      border-radius: 999px;
-      border: 1px solid var(--l4-border);
-      background: rgba(15, 23, 42, 0.85);
-      color: var(--l4-text);
-      font-size: 0.92rem;
-      font-weight: 500;
-      cursor: pointer;
-      display: flex;
-      align-items: center;
-      gap: 6px;
-      transition: all 0.2s ease;
-    }
-
-    .tab-btn:hover {
-      border-color: var(--l4-blue);
-      transform: translateY(-1px);
-    }
-
-    .tab-btn.active {
-      background: var(--l4-blue);
-      border-color: var(--l4-blue);
-      color: #f9fafb;
-      box-shadow: 0 10px 25px rgba(0, 82, 164, 0.35);
-    }
-
-    .form-container {
-      background: var(--l4-dark-card);
-      border-radius: 18px;
-      padding: 28px 24px 30px;
-      box-shadow: 0 25px 50px rgba(0, 0, 0, 0.75);
-      border: 1px solid var(--l4-border);
-      display: none;
-    }
-
-    .form-container.active {
-      display: block;
-      animation: fadeInUp 0.25s ease;
-    }
-
-    @keyframes fadeInUp {
-      from {
-        opacity: 0;
-        transform: translateY(6px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
-    .form-title {
-      font-size: 1.35rem;
-      color: #f9fafb;
-      margin-bottom: 16px;
-    }
-
-    .info-box {
-      background: rgba(15, 23, 42, 0.95);
-      border-left: 4px solid var(--l4-blue);
-      padding: 10px 12px;
-      margin-bottom: 22px;
-      border-radius: 10px;
-      color: var(--l4-text);
-      font-size: 0.9rem;
-      display: flex;
-      align-items: center;
-      gap: 6px;
-    }
-
-    .section-title {
-      font-size: 0.88rem;
-      color: var(--l4-muted);
-      margin: 22px 0 10px;
-      text-transform: uppercase;
-      letter-spacing: 0.08em;
-    }
-
-    .form-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-      gap: 14px 18px;
-    }
-
-    .form-group {
-      display: flex;
-      flex-direction: column;
-      gap: 4px;
-    }
-
-    .form-group.full {
-      grid-column: 1 / -1;
-    }
-
-    .form-group label {
-      font-size: 0.82rem;
-      color: var(--l4-muted);
-    }
-
-    .form-group input,
-    .form-group select,
-    .form-group textarea {
-      background: #020617;
-      border-radius: 10px;
-      border: 1px solid var(--l4-border);
-      padding: 9px 11px;
-      font-size: 0.92rem;
-      color: var(--l4-text);
-      font-family: inherit;
-      transition: all 0.15s ease;
-    }
-
-    .form-group input::placeholder,
-    .form-group textarea::placeholder {
-      color: #4b5563;
-    }
-
-    .form-group input:focus,
-    .form-group select:focus,
-    .form-group textarea:focus {
-      outline: none;
-      border-color: var(--l4-blue);
-      box-shadow: 0 0 0 1px rgba(0, 82, 164, 0.35);
-    }
-
-    .button-group {
-      display: flex;
-      justify-content: flex-end;
-      gap: 10px;
-      margin-top: 26px;
-    }
-
-    .btn {
-      padding: 9px 22px;
-      border-radius: 999px;
-      font-size: 0.92rem;
-      font-weight: 500;
-      border: none;
-      cursor: pointer;
-      display: inline-flex;
-      align-items: center;
-      gap: 6px;
-      transition: all 0.18s ease;
-    }
-
-    .btn-primary {
-      background: var(--l4-blue);
-      color: #f9fafb;
-      box-shadow: 0 14px 28px rgba(0, 82, 164, 0.45);
-    }
-
-    .btn-primary:hover {
-      background: #004184;
-      transform: translateY(-1px);
-    }
-
-    .btn-secondary {
-      background: transparent;
-      color: var(--l4-muted);
-      border: 1px solid var(--l4-border);
-    }
-
-    .btn-secondary:hover {
-      border-color: #4b5563;
-      color: #e5e7eb;
-    }
-
-    .message {
-      margin-top: 14px;
-      padding: 9px 12px;
-      border-radius: 10px;
-      font-size: 0.86rem;
-      display: none;
-    }
-
-    .message.success {
-      display: block;
-      background: rgba(21, 128, 61, 0.12);
-      border: 1px solid #22c55e;
-      color: #bbf7d0;
-    }
-
-    .message.error {
-      display: block;
-      background: rgba(185, 28, 28, 0.12);
-      border: 1px solid #f87171;
-      color: #fecaca;
-    }
-
-    @media (max-width: 768px) {
-      .header {
-        padding: 12px 18px;
-        flex-direction: column;
-        align-items: flex-start;
-      }
-
-      .container {
-        margin-top: 20px;
-      }
-
-      .form-container {
-        padding: 20px 16px 22px;
-      }
-
-      .button-group {
-        justify-content: center;
-      }
-    }
-  </style>
+  <link rel="icon" href="data:,">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="bg-animation"></div>
@@ -721,80 +429,6 @@
     </div>
   </div>
 
-    <script>
-        const API_URL = `http://${window.location.hostname}:8000`;
-
-        function switchTab(tabName) {
-            const forms = document.querySelectorAll('.form-container');
-            forms.forEach(form => form.classList.remove('active'));
-            
-            const buttons = document.querySelectorAll('.tab-btn');
-            buttons.forEach(btn => btn.classList.remove('active'));
-            
-            document.getElementById(tabName).classList.add('active');
-            event.target.classList.add('active');
-        }
-
-        async function gerarDocumento(tipo) {
-            const forms = {
-                'contrato': 'contratoForm',
-                'procuracao': 'procuracaoForm',
-                'ciencia': 'cienciaForm',
-                'declaracao': 'declaracaoForm'
-            };
-
-            const form = document.getElementById(forms[tipo]);
-            const formData = new FormData(form);
-            const dados = Object.fromEntries(formData);
-
-            if (!form.checkValidity()) {
-                mostrarMensagem(tipo, 'Preencha todos os campos obrigatórios!', 'error');
-                form.reportValidity();
-                return;
-            }
-
-            mostrarMensagem(tipo, '⏳ Gerando documento...', 'success');
-
-            try {
-                const response = await fetch(`${API_URL}/gerar/${tipo}`, {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify(dados)
-                });
-
-                if (!response.ok) {
-                    throw new Error('Erro ao gerar documento');
-                }
-
-                const blob = await response.blob();
-                const url = window.URL.createObjectURL(blob);
-                const a = document.createElement('a');
-                a.href = url;
-                a.download = `${tipo}_${dados[Object.keys(dados)[0]].replace(/\s+/g, '_')}.docx`;
-                document.body.appendChild(a);
-                a.click();
-                window.URL.revokeObjectURL(url);
-                document.body.removeChild(a);
-
-                mostrarMensagem(tipo, '✅ Documento gerado com sucesso!', 'success');
-            } catch (error) {
-                console.error(error);
-                mostrarMensagem(tipo, '❌ Erro ao gerar documento. Verifique sua conexão.', 'error');
-            }
-        }
-
-        function mostrarMensagem(tipo, mensagem, classe) {
-            const msgDiv = document.getElementById(tipo + 'Msg');
-            msgDiv.textContent = mensagem;
-            msgDiv.className = 'message ' + classe;
-            setTimeout(() => {
-                if (classe === 'success' && !mensagem.includes('⏳')) {
-                    msgDiv.className = 'message';
-                }
-            }, 5000);
-        }
-    </script>
+  <script src="script.js"></script>
 </body>
 </html>
