--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>L4 Ativos - Gerador de Documentos</title>
   <link rel="icon" href="data:,">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="static/styles.css">
 </head>
 <body>
   <div class="bg-animation"></div>
@@ -429,6 +429,6 @@
     </div>
   </div>
 
-  <script src="script.js"></script>
+  <script src="static/script.js"></script>
 </body>
 </html>
